# fluorine

./: .gitignore  Makefile  README.md  flake.nix  meson.build
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
apps/hello_world/: meson.build
apps/hello_world/src/: main.vala
apps/start_menu/: meson.build
apps/start_menu/src/: main.vala
flapp/: meson.build
flapp/src/: component.vala
flstart/: meson.build
flstart/src/: config.vala.in  entry.vala  main.vala
